# pyside2_example

./: README.md  pyproject.toml
pyapp/: app.py  ui_window.py  window.ui
pyside2app/: app.py
tests/: test_pyapp.py
