[tool.poetry]
name = "pyside2app"
version = "0.1.0"
description = ""
authors = ["Alex P <alex.pantec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyside2 = "^5.13"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
